--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 <!-- area for stories (all stories, user stories, favorites) -->
 <section class="stories-container container">
 
-  <!-- form for submitted new story -->
-  <form action="" class="hidden" id ="submit-form">
+  <!-- form for submitting new story -->
+  <form action="" class="hidden" id ="submit-form" style="display: none">
     <div class="story-input">
       <label for="story-author">author</label>
       <input id="story-author" required placeholder="author name">
