function references modified

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
       <input id="story-title" required placeholder="story title">
     </div>
     <div class ="story-input">
-      <label for="story-url" required >url</label>
-      <input id="story-url">
+      <label for="story-url" required>url</label>
+      <input id="story-url" required placeholder= "url">
     </div>
     <button type="submit">Submit</button>
     <hr>
@@ -78,10 +78,10 @@
   <ol id="all-stories-list" class="stories-list"></ol>
 
   <!-- List of favorited stories -->
-  <ol id="favorited-stories" class="hidden stories-list"></ol>
+  <ol id="favorite-stories-list" class="hidden stories-list"></ol>
 
   <!-- List of stories by the user -->
-  <ol id="my-stories" class="hidden stories-list"></ol>
+  <ol id="my-stories-list" class="hidden stories-list"></ol>
 
 </section>
 
